# agentic_fullstack_builder

./: README.md  pyproject.toml  sample_logs.txt  start_backend.sh  start_frontend.sh  test_callback.py
backend/: main.py  run_crew_cli.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
sandbox/: README.md  _validate.py  app.py  backend.py  design.md  pyproject.toml  test_backend.py  test_summary.md
src/agentic_fullstack_builder/: crew.py  main.py
src/agentic_fullstack_builder/config/: agents.yaml  tasks.yaml
src/agentic_fullstack_builder/tools/: sandbox_tools.py
