[project]
name = "agentic_fullstack_builder"
version = "0.1.0"
description = "agentic-fullstack-builder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0"
]

[project.scripts]
agentic_fullstack_builder = "agentic_fullstack_builder.main:run"
run_crew = "agentic_fullstack_builder.main:run"
train = "agentic_fullstack_builder.main:train"
replay = "agentic_fullstack_builder.main:replay"
test = "agentic_fullstack_builder.main:test"
run_with_trigger = "agentic_fullstack_builder.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv.workspace]
members = [
    "sandbox",
]
